Avance de trabajo

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Examen Final - Modulo 2</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 <body>
+    <h1>Proyecto final Módulo 2:  Piedra, Papel o Tijera</h1>
+
+
+
     
 
 
