Examen final, entrega

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Piedra, Papel o Tijera</h1>
         </header>
         <main>
-            <p>Tres (3) puntos para ganar</p>
+            <p>El promero en llegar a 3 puntos, gana:</p>
         
             <ul id="marcador">
                 <li><h2 id="ronda">Ronda 0</h2></li>
@@ -46,7 +46,7 @@
             
             <div id="ganador"></div>
         </main>
-        <footer>&copy Eddie Casanas 2023</footer>
+        <footer>&copy Emmanuel Nieto Munoz 2024  -  Sensitiva  -  Fullstack Python</footer>
     </div>
 
 
